# multiforge

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
ForgeDB/: README.md
ForgeHub/: README.md
ForgeImager/: CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  DEVELOPMENT.en.md  DEVELOPMENT.md  README.en.md  README.md  create-appimage-cli.sh
ForgeOS/: README.md  forge-agent.py  forge-provision.service  forge_display.py
Imager/: .gitignore  .qmllint.ini  create-appimage.sh  create-embedded.sh  license.txt
docs/: ForgeDB.md  ForgeHub.md  ForgeImager.md  ForgeOS.md  architecture.md  btv-e10.md  modules.md  roadmap.md
modulos/sub-modulos/scraping/: .gitignore  docker-compose.yml  pyproject.toml
modulos/sub-modulos/scraping/agent/: rag.py  tools.py
modulos/sub-modulos/scraping/api/: main.py  schemas.py
modulos/sub-modulos/scraping/collector/: main.py  scheduler.py  university_api.py  university_portal.py
modulos/sub-modulos/scraping/config/: __init__.py  settings.py
modulos/sub-modulos/scraping/database/: __init__.py  repository.py
modulos/sub-modulos/scraping/frontend/: index.html
modulos/sub-modulos/scraping/frontend/css/: style.css
modulos/sub-modulos/scraping/frontend/js/: app.js
modulos/sub-modulos/scraping/scripts/: install_linux.sh
modulos/sub-modulos/scraping/shared/: __init__.py  logging_config.py
modulos/sub-modulos/scraping/tests/: conftest.py  test_base.py  test_collector.py  test_settings.py
(+565 files in other folders)
